--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@
     color: chocolate;
     background-color: honeydew;
 }
+#about-love{
+    color: rgb(252, 24, 62);
+    background-color: antiquewhite;
+}
+#lorem{
+    color: crimson;
+    background-color: bisque;
+}
